--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
             <version>1.1.0</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.2</version>
+        </dependency>
 
     </dependencies>
     <properties>
